заплатки (vectary умер)

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <!-- <meta name="robots" content="noindex,nofollow,noarchive">
     <meta name="yandex" content="noindex,nofollow,noarchive">
     <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
@@ -18,6 +19,7 @@
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#090909"/>
+    
     <!--Primary Meta Tags-->
     <meta name="title" content="Гараж ЦОДД"/>
     <meta name="description" content="Интерактивный просмотр транспорта ЦОДД с&nbsp;возможностью вывода в&nbsp;дополненную реальность выбранной модели"/>
@@ -173,7 +175,7 @@
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/trafifk_menu.mp4" muted loop playsinline>
+                                <video class="menu_preview-video" src="./img/video/traffik_menu.mp4" muted loop playsinline>
                                 </video>
                             </div>
                         </div>
@@ -320,7 +322,7 @@
                             Дорожный патруль нельзя вызвать. Задания экипажи получают от&nbsp;дежурных Ситуационного центра ЦОДД
                         </p>
                     </div>
-                    <!-- <div class="traffic_patrol-slide-kamaz_NOSLIDER">
+                    <div class="traffic_patrol-slide-kamaz_NOSLIDER">
                         <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="kamaz.html">
                             <div class="slid_img">
                                 <picture>
@@ -393,11 +395,11 @@
                                 </div>
                             </div>
                         </a>
-                    </div> -->
+                    </div>
                     <div class="traffic_patrol-slide-kamaz">
                         <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="moto.html">
+                                <!-- <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="moto.html">
                                     <div class="slid_img">
                                         <picture>
                                             <img class="menu_preview-img" src="./img/layout/pages/main/slider/moto.png" alt="Мотопатруль" fetchpriority="high">
@@ -420,7 +422,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                </a>
+                                </a> -->
                                  <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
                                     <div class="slid_img">
                                         <picture>
