--- a/src/pages/moto.html
+++ b/src/pages/moto.html
@@ -6,11 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- <meta name="robots" content="noindex,nofollow,noarchive">
+    <meta name="robots" content="noindex,nofollow,noarchive">
     <meta name="yandex" content="noindex,nofollow,noarchive">
-    <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
+    <meta name="googlebot" content="noindex,nofollow,noarchive">
 
-    <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+    <!-- <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
     <meta name="google-site-verification" content="0dZw6jM4sYdeu4GqW-DoUbESkEAaX7OuIC6deq1n5OQ" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
@@ -19,28 +19,29 @@
     <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#090909">
+    <meta name="theme-color" content="#090909"> -->
+
     <!--Primary Meta Tags-->
-    <meta name="title" content="Мотопатруль"/>
+    <!-- <meta name="title" content="Мотопатруль"/>
     <meta name="description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, мотопатруль, мотоцикл"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, мотопатруль, мотоцикл"/> -->
 
     <!--Open Graph / Facebook-->
-    <meta property="og:type" content="website"/>
+    <!-- <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://garage-codd.ru/"/>
     <meta property="og:title" content="Мотопатруль"/>
     <meta property="og:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta property="og:image" content="https://garage-codd.ru/images/velo.png"/>
+    <meta property="og:image" content="https://garage-codd.ru/images/velo.png"/> -->
 
     <!--Twitter-->
-    <meta property="twitter:card" content="summary_large_image"/>
+    <!-- <meta property="twitter:card" content="summary_large_image"/>
     <meta property="twitter:url" content="https://garage-codd.ru/"/>
     <meta property="twitter:title" content="Мотопатруль"/>
     <meta property="twitter:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta property="twitter:image" content="https://garage-codd.ru/images/velo.png"/>
+    <meta property="twitter:image" content="https://garage-codd.ru/images/velo.png"/> -->
 
     <!-- Yandex.Metrika counter -->
-    <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
+    <!-- <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
@@ -55,7 +56,7 @@
             webvisor:true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
     <!-- /Yandex.Metrika counter -->
 
     <title>Мотопатруль</title>
@@ -133,7 +134,7 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_amarok_4.svg" alt="Насос" fetchpriority="high">
+                                <img src="../img/layout/outfit/moto/outfit_moto_1.svg" alt="Насос" fetchpriority="high">
                             </div>
                             <span class="tech_spec__outfit-text">Насос</span>
                         </li>
@@ -157,7 +158,7 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_amarok_3.svg" alt="Курвиметр" fetchpriority="high">
+                                <img src="../img/layout/outfit/moto/outfit_moto_2.svg" alt="Курвиметр" fetchpriority="high">
                             </div>
                             <span class="tech_spec__outfit-text">Курвиметр</span>
                         </li>
@@ -169,7 +170,7 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/velo/outfit_velo_1.svg" alt="Вода" fetchpriority="high">
+                                <img src="../img/layout/outfit/moto/outfit_moto_3.svg" alt="Вода" fetchpriority="high">
                             </div>
                             <span class="tech_spec__outfit-text">Ремкомплект для колес</span>
                         </li>
@@ -369,17 +370,18 @@
     }
 
     const IframeObject = {
-        AR_ON: 'https://app.vectary.com/p/20JQIwevUsATXy0FmMItB6',
+        // AR_ON: 'https://app.vectary.com/p/6OQoYI5PT16GT2mvg0nCcf',
+        AR_ON: 'https://app.vectary.com/p/5XQ1qmeOI2wtFklLUeMJGa',
         AR_OFF: 'https://app.vectary.com/p/5DCAXqY66WlQGA3Qzm4iPI',
     };
 
     let screenWidth = window.innerWidth;
     let readySRC;
-    let ARButtonPulse = document.querySelector('.pulse_wrapper');
+    // let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
-        ARButtonPulse.style.display = 'none';
+        // ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
     } else {
@@ -389,6 +391,7 @@
     document.addEventListener("DOMContentLoaded", () => {
         let VectaryIframe = document.querySelector('.VectaryIframe');
         VectaryIframe.src = readySRC;
+        
         myLoading();
     });
 </script>
