блок с мото на главной

--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,7 @@
                     </div>
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: мотоцикл, грузовик, пикап, фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: грузовик, пикап, фургон, легковая машина. А&nbsp;также 6&nbsp;мотопатрульных. Все транспортные средства ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками и&nbsp;логотипом ЦОДД
                         </p>
                     </div>
                     <div class="traffic_patrol-text-5">
@@ -323,7 +323,31 @@
                         </p>
                     </div>
                     <div class="traffic_patrol-slide-kamaz_NOSLIDER">
-                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="kamaz.html">
+                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="moto.html">
+                            <div class="slid_img">
+                                <picture>
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/moto.png" alt="Мотопатруль" fetchpriority="high">
+                                </picture>
+                                <video class="menu_preview-video" src="./img/video/moto.mp4" muted loop playsinline></video>
+                            </div>
+                            <div class="slid_info">
+                                <div class="slid_info-desc">
+                                    <p class="slid_info-title">Дорожный патруль</p>
+                                    <p class="slid_info-text">Мотоцикл</p>
+                                </div>
+                                <div class="slid_info-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                            <rect width="18" height="18" fill="#D9D9D9"/>
+                                        </mask>
+                                        <g mask="url(#mask0_1137_313)">
+                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_2" href="kamaz.html">
                             <div class="slid_img">
                                 <picture>
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/kamaz.png" alt="Грузовик" fetchpriority="high">
@@ -347,7 +371,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_2" href="amarok.html">
+                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_3" href="amarok.html">
                             <div class="slid_img">
                                 <picture>
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
@@ -371,7 +395,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_3" href="ford.html">
+                        <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_4" href="ford.html">
                             <div class="slid_img">
                                 <picture>
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
@@ -399,7 +423,7 @@
                     <div class="traffic_patrol-slide-kamaz">
                         <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <!-- <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="moto.html">
+                                <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="moto.html">
                                     <div class="slid_img">
                                         <picture>
                                             <img class="menu_preview-img" src="./img/layout/pages/main/slider/moto.png" alt="Мотопатруль" fetchpriority="high">
@@ -422,7 +446,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                </a> -->
+                                </a>
                                  <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
                                     <div class="slid_img">
                                         <picture>
@@ -512,7 +536,7 @@
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или&nbsp;аварии
                         </p>
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: грузовик, пикап, фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: грузовик, пикап, фургон, легковая машина. А&nbsp;также 6&nbsp;мотопатрульных. Все транспортные средства ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками и&nbsp;логотипом ЦОДД
                         </p>
                     </div>
                 </div>
@@ -754,7 +778,7 @@
                     <div class="parkon-2">
                         <p class="parkon_title">Создана на&nbsp;базе мобильных комплексов фотовидеофиксации</p>
                         <div class="parkon_descr">
-                            <p class="parkon_text">110 автомобилей патрулируют город 24/7 и&nbsp;приезжаютк&nbsp;водителям, которые попалив&nbsp;ДТП или&nbsp;столкнулисьсо&nbsp;сложностями на&nbsp;дороге</p>
+                            <p class="parkon_text">110 автомобилей патрулируют город 24/7 и&nbsp;приезжают к&nbsp;водителям, которые попали в&nbsp;ДТП или столкнулись со&nbsp;сложностями на&nbsp;дороге</p>
                             <p class="parkon_text">На&nbsp;машинах установлены камеры, которые автоматически следят за&nbsp;соблюдением ПДД, а&nbsp;также распознают транспорт, который находится в&nbsp;розыске</p>
                         </div>
                     </div>
