--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#090909"> -->
+    <meta name="theme-color" content="#090909">
     
     <!--Primary Meta Tags-->
     <!-- <meta name="title" content="Мобильный ситуационный центр. Автобус"/>
     <meta name="description" content="Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации"/>
-    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, автобус, мобильный ситуационный центр, ситуационный центр, мобильный"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, автобус, мобильный ситуационный центр, ситуационный центр, мобильный"/> -->
 
     <!--Open Graph / Facebook-->
     <meta property="og:type" content="website"/>
@@ -151,11 +151,11 @@
 <div class="progress-bar">
     <div class="progress-bar-container">
         <div class="image">
-            <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд">
+            <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд" fetchpriority="high">
         </div>
-        <span id="progress-label">0%</span>
+        <span id="progress-label">1%</span>
         <div id="hellopreloader_barWrapper">
-            <progress id="progress-bar" value="0" max="100"></progress>
+            <progress id="progress-bar" value="1" max="100"></progress>
         </div>
         <label for="progress-bar" id="progress_text">Загружаем модель в высоком разрешении.<br>Пожалуйста, дождитесь завершения</label>
     </div>
@@ -168,7 +168,7 @@
     </a>
 </div>
 
-<div class="vectary_forbidden open">
+<div class="vectary_forbidden">
     <div class="forbidden_icons">
         <img class="forbidden-warning" src="../img/vectary_403/forbidden_warning.svg" alt="warning">
         <img class="forbidden-arrow" src="../img/vectary_403/forbidden_arrow.svg" alt="arrow">
