--- a/src/pages/moto.html
+++ b/src/pages/moto.html
@@ -6,11 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <meta name="robots" content="noindex,nofollow,noarchive">
+    <!-- <meta name="robots" content="noindex,nofollow,noarchive">
     <meta name="yandex" content="noindex,nofollow,noarchive">
-    <meta name="googlebot" content="noindex,nofollow,noarchive">
+    <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
 
-    <!-- <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+    <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
     <meta name="google-site-verification" content="0dZw6jM4sYdeu4GqW-DoUbESkEAaX7OuIC6deq1n5OQ" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
@@ -19,29 +19,23 @@
     <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#090909"> -->
-
-    <!--Primary Meta Tags-->
-    <!-- <meta name="title" content="Мотопатруль"/>
+    <meta name="theme-color" content="#090909">
+    <meta name="title" content="Мотопатруль"/>
     <meta name="description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, мотопатруль, мотоцикл"/> -->
-
-    <!--Open Graph / Facebook-->
-    <!-- <meta property="og:type" content="website"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, мотопатруль, мотоцикл"/>
+    <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://garage-codd.ru/"/>
     <meta property="og:title" content="Мотопатруль"/>
     <meta property="og:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta property="og:image" content="https://garage-codd.ru/images/velo.png"/> -->
-
-    <!--Twitter-->
-    <!-- <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="og:image" content="https://garage-codd.ru/images/velo.png"/>
+    <meta property="twitter:card" content="summary_large_image"/>
     <meta property="twitter:url" content="https://garage-codd.ru/"/>
     <meta property="twitter:title" content="Мотопатруль"/>
     <meta property="twitter:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
-    <meta property="twitter:image" content="https://garage-codd.ru/images/velo.png"/> -->
+    <meta property="twitter:image" content="https://garage-codd.ru/images/velo.png"/>
 
     <!-- Yandex.Metrika counter -->
-    <!-- <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
+    <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
@@ -56,7 +50,7 @@
             webvisor:true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+    <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
     <title>Мотопатруль</title>
@@ -75,11 +69,11 @@
 <div class="progress-bar">
     <div class="progress-bar-container">
         <div class="image">
-            <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд">
+            <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд" fetchpriority="high">
         </div>
-        <span id="progress-label">0%</span>
+        <span id="progress-label">1%</span>
         <div id="hellopreloader_barWrapper">
-            <progress id="progress-bar" value="0" max="100"></progress>
+            <progress id="progress-bar" value="1" max="100"></progress>
         </div>
         <label for="progress-bar" id="progress_text">Загружаем модель в высоком разрешении.<br>Пожалуйста, дождитесь завершения</label>
     </div>
